[project]
name = "codebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
]

[project.scripts]
codebook = "codebook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
